cmake_minimum_required(VERSION 3.16)
project(SparseSpreadsheet LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
add_library(sparsematrix STATIC src/SparseMatrix.cpp include/SparseMatrix.h)
target_include_directories(sparsematrix PUBLIC include)
add_executable(test_app src/main.cpp)
target_link_libraries(test_app sparsematrix)
